fix: home page labels not aligned

--- a/src/pages/homePage/styles.module.scss
+++ b/src/pages/homePage/styles.module.scss
@@ -1,7 +1,7 @@
 .container {
   .sections {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     gap: vars.$spacing-primary;
 
     .section {
@@ -18,9 +18,17 @@
         background-color: vars.$color-surface2;
       }
 
-      .sectionIcon {
-        color: vars.$color-text-secondary;
-        font-size: 42px;
+      .iconContainer {
+        aspect-ratio: 1;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        height: 50px;
+
+        .sectionIcon {
+          color: vars.$color-text-secondary;
+          font-size: 42px;
+        }
       }
 
       .sectionName {
